k8s/minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mr-api
  labels:
    app: mr-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mr-api
  template:
    metadata:
      labels:
        app: mr-api
    spec:
      containers:
        - name: mr-api_backend
          image: mr-api_backend:latest
          imagePullPolicy: IfNotPresent
          command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
              name: gunicorn
