k8s/minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mr-api-service
spec:
  selector:
    app: mr-api
  ports:
    - port: 8000
      targetPort: 8000
