k8s/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mr-api-service
                port:
                  number: 8000
